# ML_Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: main.cpp
include/ml/: DataSetLoader.h  DataSplitter.h  Gradients.h  LinearModel.h  LinearRegressionPipeline.h  LogisticModel.h  LogisticRegressionPipeline.h  LossFunctions.h  Operations.h  StandardScaler.h  Trainer.h  vector.h
include/ml/activations/: ReLUActivation.h  SigmoidActivation.h
include/ml/core/: Matrix.h  Operations.h
include/ml/data/: DataSetLoader.h  DataSplitter.h
include/ml/layers/: DenseLayer.h
include/ml/models/: LinearModel.h  LogisticModel.h
include/ml/pipelines/: LinearRegressionPipeline.h  LogisticRegressionPipeline.h
include/ml/training/: Gradients.h  LossFunctions.h  StandardScaler.h  Trainer.h
src/: DataSetLoader.cpp  DataSplitter.cpp  Gradients.cpp  LinearModel.cpp  LinearRegressionPipeline.cpp  LogisticModel.cpp  LogisticRegressionPipeline.cpp  LossFunctions.cpp  Operations.cpp  StandardScaler.cpp  Trainer.cpp  matrix.cpp  vector.cpp
src/activations/: ReLUActivation.cpp  SigmoidActivation.cpp
src/core/: Matrix.cpp  Operations.cpp  Vector.cpp
src/data/: DataSetLoader.cpp  DataSplitter.cpp
src/layers/: DenseLayer.cpp
src/models/: LinearModel.cpp  LogisticModel.cpp
src/pipelines/: LinearRegressionPipeline.cpp  LogisticRegressionPipeline.cpp
src/training/: Gradients.cpp  LossFunctions.cpp  StandardScaler.cpp  Trainer.cpp
tests/: GradientsTests.cpp  LinearModelTests.cpp  LinearRegressionPipelineTests.cpp  LogisticModelTests.cpp  LogisticRegressionTrainerTests.cpp  LossFunctionsTests.cpp  MatrixTests.cpp  OperationsTests.cpp  StandardScalerTests.cpp  TrainerTests.cpp  VectorTests.cpp
